# framework-business

./: .env.example  .gitignore  AGENTS.MD  CLAUDE.MD  LANGCHAIN.MD  MIGRATION_REPORT.md  README.MD  REFACTORING_REPORT.md  __init__.py  cagent.yaml  install.sh  kill.sh  migrate_subagents.py  pyproject.toml  refactor_all_subagents.sh  refactor_subagents.py  remove_duplicate_methods.py  requirements.txt  run.sh
.github/workflows/: tests.yml
agents/: .env.example  .pre-commit-config.yaml  INSTALL.sh  README.MD  RUN.sh  __init__.py  base.py  decorators.py  exceptions.py  llm_factory.py  pytest.ini  registry.py  requirements.txt  setup.py
agents/ZeroUm/: orchestrator.py
agents/config/: __init__.py  settings.py
agents/deepagents/: __init__.py  reasoning.py  state.py  tools.py
agents/framework/: README.md  __init__.py  config.py
agents/generic/: __init__.py  orchestrator.py
agents/orchestrators/: __init__.py  langgraph.py
agents/scripts/: check_env.py  clean_cache.sh  run_autonomous_task.py  run_strategy_agent.py
agents/tests/: __init__.py  test_autonomous_execution.py  test_base.py  test_context_utils.py  test_deepagents_features.py  test_drive_writer.py  test_env_validation.py  test_execution_tools.py  test_final_cleanup.py  test_llm_factory.py  test_manifest.py  test_orchestrators_langgraph.py  test_package.py  test_phase5_migration.py  test_subagent_execution.py  test_template_filler.py
agents/tools/: __init__.py  registry.py
agents/utils/: __init__.py  context.py  drive_writer.py  env_validation.py  instrumentation.py  manifest.py  package.py  todos.py
agents/workflows/: __init__.py  zero_um_graph.py
agents/zero_um/: __init__.py  orchestrator.py
business/: __init__.py
business/examples/: README.md  README_CLIENT_DELIVERY.md  __init__.py  autonomous_task_example.py  client_delivery_example.py  dynamic_orchestrator_example.py  problem_hypothesis_express_example.py  simple_agent_example.py  zeroum_example.py
docs/: AUTONOMOUS_EXECUTION.md  AUTONOMOUS_EXECUTION_IMPLEMENTATION.md  COMO_VER_LOGS.md  COMPLETE_CLEANUP_SUMMARY.md  EXECUCAO_AUTOMARTICLES_COMPLETA.md  EXECUTION_TOOLS.md  FINAL_STRUCTURE.md  FIXES_APLICADOS_RESUMO.md  FIX_DOTENV_LOADING.md  FIX_SUBAGENTES_NAO_IMPLEMENTADOS.md  GUIA_CRIAR_SUBAGENTES.md  IMPLEMENTACAO_COMPLETA_RESUMO.md  IMPLEMENTATION_COMPLETE.md  LLM_SETUP.md  LOGS_MELHORADOS.md  MIGRATION_GUIDE.MD  MUDANCAS_CRITICAS.md  OBSERVABILITY.MD  ORQUESTRADOR_COMPLETO_IMPLEMENTADO.md  ORQUESTRADOR_DINAMICO_IMPLEMENTADO.md  PROJECT_STATUS.md  PROJETO_FINALIZADO.md  QUICK_FIX_AUTONOMOUS_EXECUTION.md  QUICK_SETUP.md  RENAMING_SUMMARY.MD  RESUMO_EXECUTIVO.md  SCRIPTS_UPDATED.md  SECURITY_CONTROLS.md  SOLUCAO_FINAL_CACHE_PYTHON.md  SUBAGENTE_CLIENT_DELIVERY_CRIADO.md  SUBAGENTE_PROBLEM_HYPOTHESIS_EXPRESS_CRIADO.md  SUCESSO_COMPLETO_ORQUESTRADOR_DINAMICO.md  TEMPLATE_FILLER_USAGE.md
drive/: README.MD
drive/Automarticles/: 00-consolidado.MD
drive/ContentPublication/: briefing-post-linkedin.MD  calendario-conteudo.MD  roteiro-stories.MD  tracker-engajamento.MD
drive/LandingPageCreation/: briefing-landing.MD  checklist-qa.MD  copy-draft.MD  estrutura-secoes.MD  plano-analytics.MD
drive/MEIFinancialHealth/: README.MD  consolidacao.MD  consolidation.MD
drive/ManualMVPDesign/: briefing-manual-mvp.MD  checklist-execucao.MD  estrutura-board.MD  inventario-materiais.MD  mapa-fluxo-entrega.MD  modelo-email-entrega.MD  modelo-email-follow-up.MD  modelo-email-onboarding.MD
drive/ProblemHypothesisDefinition/: hypothesis-sistema-financeiro-varejo.MD
drive/TargetUserIdentification/: 01-frase-problema.MD  02-brainstorm-segmentos.MD  03-perfis-selecionados.MD  04-perfil-01-mercearia.MD  04-perfil-02-quitanda.MD  04-perfil-03-cosmeticos.MD  04-perfil-04-petshop.MD  04-perfil-05-bazar.MD  05-avaliacao-acessibilidade.MD  06-perfis-completos.MD  06-resumo-executivo.MD  06-tabela-comparativa.MD  07-contatos.csv
drive/UserInterviewValidation/: briefing-entrevistas.MD  plano-recrutamento.MD  roteiro-entrevista-base.MD  tracker-recrutamento.MD
framework/: README.md  __init__.py  config.py
framework/agents/: README.md  __init__.py  base.py
framework/core/: __init__.py  context.py  decorators.py  protocols.py
framework/io/: KNOWLEDGE_EXAMPLES.md  __init__.py  knowledge.py  manifest.py  package.py  workspace.py
framework/llm/: __init__.py  factory.py
framework/observability/: README.md  __init__.py  callbacks.py  exporters.py  metrics.py  monitoring.py  todos.py  tracing.py
framework/orchestration/: __init__.py  autonomous.py  graph.py  langgraph_adapter.py  pipeline.py  registry.py
framework/security/: __init__.py  controls.py
framework/tools/: __init__.py  registry.py
models/: global-directives.MD
process/CheckoutSetup/: knowledge.MD  process.MD  tasks.MD  validator.MD
process/ClientDelivery/: knowledge.MD  process.MD  tasks.MD  validator.MD
process/ContentPublication/: knowledge.MD  process.MD  tasks.MD  validator.MD
process/LandingPageCreation/: README.MD  knowledge.MD  process.MD  tasks.MD  (+1 more)
requirements/: llm.txt
scripts/: __init__.py  check_env.py  run_autonomous_task.py  run_strategy_agent.py  test_monitoring.py
strategies/: README.MD
tests/: conftest.py  test_autonomous_execution.py  test_deepagents_features.py  test_execution_tools.py  test_final_cleanup.py  test_monitoring_simple.py  test_monitoring_standalone.py  test_orchestrators_langgraph.py  test_package.py  test_phase5_migration.py  test_template_filler.py  test_zero_um_graph.py
(+751 files in other folders)
